crates/ruff/src/rules/pygrep_hooks/snapshots/ruff__rules__pygrep_hooks__tests__PGH001_PGH001_0.py.snap
---
source: crates/ruff/src/rules/pygrep_hooks/mod.rs
expression: diagnostics
---
- kind:
    name: NoEval
    body: "No builtin `eval()` allowed"
    commit: ~
    fixable: false
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 4
  fix: ~
  parent: ~
- kind:
    name: NoEval
    body: "No builtin `eval()` allowed"
    commit: ~
    fixable: false
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 8
  fix: ~
  parent: ~

