crates/ruff/src/rules/pygrep_hooks/snapshots/ruff__rules__pygrep_hooks__tests__PGH003_PGH003_0.py.snap
---
source: crates/ruff/src/rules/pygrep_hooks/mod.rs
expression: diagnostics
---
- - kind:
      name: BlanketTypeIgnore
      body: Use specific rule codes when ignoring type issues
      suggestion: ~
      fixable: false
    location:
      row: 1
      column: 7
    end_location:
      row: 1
      column: 21
    fix: ~
    parent: ~
  - kind:
      name: BlanketTypeIgnore
      body: Use specific rule codes when ignoring type issues
      suggestion: ~
      fixable: false
    location:
      row: 2
      column: 7
    end_location:
      row: 2
      column: 20
    fix: ~
    parent: ~
  - kind:
      name: BlanketTypeIgnore
      body: Use specific rule codes when ignoring type issues
      suggestion: ~
      fixable: false
    location:
      row: 3
      column: 7
    end_location:
      row: 3
      column: 20
    fix: ~
    parent: ~

