crates/ruff/src/rules/pygrep_hooks/snapshots/ruff__rules__pygrep_hooks__tests__PGH004_PGH004_0.py.snap
---
source: crates/ruff/src/rules/pygrep_hooks/mod.rs
expression: diagnostics
---
- - kind:
      name: BlanketNOQA
      body: "Use specific rule codes when using `noqa`"
      suggestion: ~
      fixable: false
    location:
      row: 1
      column: 7
    end_location:
      row: 1
      column: 13
    fix: ~
    parent: ~
  - kind:
      name: BlanketNOQA
      body: "Use specific rule codes when using `noqa`"
      suggestion: ~
      fixable: false
    location:
      row: 2
      column: 7
    end_location:
      row: 2
      column: 15
    fix: ~
    parent: ~
  - kind:
      name: BlanketNOQA
      body: "Use specific rule codes when using `noqa`"
      suggestion: ~
      fixable: false
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 6
    fix: ~
    parent: ~
  - kind:
      name: BlanketNOQA
      body: "Use specific rule codes when using `noqa`"
      suggestion: ~
      fixable: false
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 6
    fix: ~
    parent: ~
  - kind:
      name: BlanketNOQA
      body: "Use specific rule codes when using `noqa`"
      suggestion: ~
      fixable: false
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 8
    fix: ~
    parent: ~
  - kind:
      name: BlanketNOQA
      body: "Use specific rule codes when using `noqa`"
      suggestion: ~
      fixable: false
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 8
    fix: ~
    parent: ~

