crates/ruff/src/rules/pygrep_hooks/snapshots/ruff__rules__pygrep_hooks__tests__PGH005_PGH005_0.py.snap
---
source: crates/ruff/src/rules/pygrep_hooks/mod.rs
---
PGH005_0.py:2:8: PGH005 Non-existent mock method: `not_called`
  |
2 | # Errors
3 | assert my_mock.not_called()
  |        ^^^^^^^^^^^^^^^^^^^^ PGH005
4 | assert my_mock.called_once_with()
5 | assert my_mock.not_called
  |

PGH005_0.py:3:8: PGH005 Non-existent mock method: `called_once_with`
  |
3 | # Errors
4 | assert my_mock.not_called()
5 | assert my_mock.called_once_with()
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^ PGH005
6 | assert my_mock.not_called
7 | assert my_mock.called_once_with
  |

PGH005_0.py:4:8: PGH005 Non-existent mock method: `not_called`
  |
4 | assert my_mock.not_called()
5 | assert my_mock.called_once_with()
6 | assert my_mock.not_called
  |        ^^^^^^^^^^^^^^^^^^ PGH005
7 | assert my_mock.called_once_with
8 | my_mock.assert_not_called
  |

PGH005_0.py:5:8: PGH005 Non-existent mock method: `called_once_with`
  |
5 | assert my_mock.called_once_with()
6 | assert my_mock.not_called
7 | assert my_mock.called_once_with
  |        ^^^^^^^^^^^^^^^^^^^^^^^^ PGH005
8 | my_mock.assert_not_called
9 | my_mock.assert_called
  |

PGH005_0.py:6:1: PGH005 Mock method should be called: `assert_not_called`
   |
 6 | assert my_mock.not_called
 7 | assert my_mock.called_once_with
 8 | my_mock.assert_not_called
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ PGH005
 9 | my_mock.assert_called
10 | my_mock.assert_called_once_with
   |

PGH005_0.py:7:1: PGH005 Mock method should be called: `assert_called`
   |
 7 | assert my_mock.called_once_with
 8 | my_mock.assert_not_called
 9 | my_mock.assert_called
   | ^^^^^^^^^^^^^^^^^^^^^ PGH005
10 | my_mock.assert_called_once_with
11 | my_mock.assert_called_once_with
   |

PGH005_0.py:8:1: PGH005 Mock method should be called: `assert_called_once_with`
   |
 8 | my_mock.assert_not_called
 9 | my_mock.assert_called
10 | my_mock.assert_called_once_with
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PGH005
11 | my_mock.assert_called_once_with
12 | MyMock.assert_called_once_with
   |

PGH005_0.py:9:1: PGH005 Mock method should be called: `assert_called_once_with`
   |
 9 | my_mock.assert_called
10 | my_mock.assert_called_once_with
11 | my_mock.assert_called_once_with
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PGH005
12 | MyMock.assert_called_once_with
   |

PGH005_0.py:10:1: PGH005 Mock method should be called: `assert_called_once_with`
   |
10 | my_mock.assert_called_once_with
11 | my_mock.assert_called_once_with
12 | MyMock.assert_called_once_with
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PGH005
13 | 
14 | # OK
   |


